# alg-top

./: Cargo.toml  LICENSE.md  README.md
implicit-manifold-compute/: Cargo.toml
implicit-manifold-compute/src/: algebra.rs  lib.rs
implicit-manifold-compute/src/algebra/: matrix.rs  ring_traits.rs
implicit-manifold-compute/src/convex/: simplex.rs
implicit-manifold-render/: Cargo.toml
implicit-manifold-render/pkg/: .gitignore  README.md  package.json  web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
implicit-manifold-render/src/: lib.rs  main.rs  run.rs  tools.rs
pkg/: web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
src/: lib.rs  topology.rs
src/algebra/: matrix.rs  ring_traits.rs
src/convex/: simplex.rs
src/topology/: delta_complex.rs
